# photoscout

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
src/: diagnostics.rs  duplicates.rs  error.rs  image_decoders.rs  library_roots.rs  main.rs  model.rs  path_utils.rs  scan_coordinator.rs  scanner.rs  search.rs
src/app/: cleanup.rs  duplicate_grid.rs  grid.rs  helpers.rs  mod.rs  panels.rs  theme.rs
src/thumbnails/: bench.rs  mod.rs  resize.rs  types.rs  workers.rs
